Fixed bug regarding apps page on mobile

--- a/src/components/apps/apps.scss
+++ b/src/components/apps/apps.scss
@@ -2,17 +2,15 @@
 
 .apps {
   height: 100vh;
-  min-height: 100vh;
+  // min-height: 100vh;
   padding: 0;
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: background-color 1000ms;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  overflow: hidden;
 }
 
 .card {
@@ -29,8 +27,9 @@
     z-index: 2;
   }
 
- .card-image {
+  .card-image {
     width: clamp(300px, 20vw, 500px);
+    // width: min(40%, 500px);
     aspect-ratio: 9 / 16;
     border-radius: clamp(0.5rem, 0.75vw, 2rem);
   }
@@ -45,7 +44,7 @@
     transition: all 1s ease;
     position: absolute;
   }
-  
+
   &:hover {
     .card-faders {
       opacity: 1;
@@ -98,41 +97,48 @@
     justify-content: flex-start;
     align-items: flex-start;
   }
-  
+
   .apps {
     flex-direction: column; 
     align-items: center;
     gap: 4rem;
     padding: 4rem;
   }
-  
+
   .card .card-image {
     width: 400px;    
   }
 }
 
-@media(max-width: 600px) {
+@media(max-width: 1200px) {
   .apps {
     gap: 2rem;
     padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-around;
+    gap: 5%;
+    font-size: 0.75em;
+    height: 80vh;
+
+    h3 {
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
-  
-  .card {
-    width: 80%;    
-  }
-  
+
   .card .card-image {
     width: 100%;    
   }
 }
 
 @keyframes spread {
-  from {
-    transform: scale(1, 1);
-    opacity: 1;
-  }
-  to {
-    transform: scale(1.3, 0.7);
-    opacity: 0;
-  }
+from {
+  transform: scale(1, 1);
+  opacity: 1;
+}
+to {
+  transform: scale(1.3, 0.7);
+  opacity: 0;
+}
 }
